Another attempt to fix horizontal scrolling in numeric questions.

--- a/scss/_concept_problem.scss
+++ b/scss/_concept_problem.scss
@@ -173,7 +173,7 @@
 
 }
 
-.ru-answer-area>div.row {
+.ru-answer-area>div.row:first-child {
     overflow-x: auto;
 }
 
